# kube-google-cloud-serveless

./: Dockerfile  README.md  cloudbuild.yaml
app/: app.py  pyproject.toml
