[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = ""
authors = ["Mateus Soares <mateussoaress1997@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
